fixed get colour, new human name componenet

--- a/src/app/nut/nut.component.html
+++ b/src/app/nut/nut.component.html
@@ -1,2 +1,2 @@
 <!-- <p>{{nutName}}</p> -->
-<p [ngStyle]="{backgroundColor: getColor()}">{{nutNumber}} {{fondLevel}}</p>
+<p [ngStyle]="{backgroundColor: getColor()}"> {{nutNumber}} {{feeling}}</p>
