eventemitter is working now

--- a/src/app/human-name/human-name.component.html
+++ b/src/app/human-name/human-name.component.html
@@ -1,8 +1,10 @@
 <p class="audrey">Audrey : what's your name, human?</p>
-<p class="human"> Human: My name is </p>
-<input placeholder = "name " type="text" class="form-control" #humanNameInput>
 
-<br>
+<!-- <input placeholder = "name " type="text" class="form-control" #humanNameInput> -->
+
+<input placeholder = "name " type="text" class="form-control" [(ngModel)]="name"  #humanNameInput  >
+
+<p class="human"> Human: My name is {{name}}</p>
 
 <button
 class="btn btn-primary" (click)="onAddHuman(humanNameInput)">submit</button>
