--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="col-sm-6">
     <h1>Feed Audrey</h1>
-    <nuts></nuts>
+    <!-- <nuts></nuts> -->
+    <h3>Chat her up</h3>
+    <p>{{this.audreyChat}}</p>
 </div>
+
